--- a/How-to.html
+++ b/How-to.html
@@ -128,5 +128,19 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
     <script type="text/javascript" src="files/hyper_spaces_abi.js"></script>
     <script type="text/javascript" src="js/dist/web3.min.js"></script>
     <script type="text/javascript" src="js/how-to.js"></script>
+        <!--*************** LOADING WEBSITE **********-->
+        <div class="loader-wrapper">
+          <span class="loader">
+            <video src="images/logo_movie.mp4" autoplay loop muted width="300" height="300">
+            </span>
+            <h4 class="loading-text">Loading...</h4>
+        </div>
+        <script src="js/jquery.js"></script>
+        <script>
+           $(window).on("load",function(){
+            $(".loader-wrapper").fadeOut("slow");
+          });
+        </script>
+    
   </body>
 </html>
