--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <meta property="og:description" content="Hyper-Spaces: wrap multi-dimensional spaces throungh the Hyper-Mint technology.">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="index.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-clearfix u-custom-color-4 u-header u-sticky u-sticky-ac50 u-header" id="sec-6b23"><div class="u-clearfix u-sheet u-sheet-1">
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+  <body data-home-page="index.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-clearfix u-custom-color-4 u-header u-sticky u-sticky-ac50 u-header" id="sec-6b23"><div class="u-clearfix u-sheet u-sheet-1">  
+    <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font u-font-montserrat" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="font-size: calc(1em + 12px); height: 28px; color: rgb(255, 255, 255) !important;">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 341.333 341.333" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3f0c"></use></svg>
@@ -80,7 +80,7 @@
         <div class="embed-responsive">
           <!--++++++++++++++++++++ BACKGROUNDVIDEO ++++++++++++++++++++-->
           <video class="embed-responsive-item" data-autoplay="1" loop="" muted="" autoplay="autoplay" playsinline="">
-            <source src="https://ipfs.io/ipfs/QmWitDk4S9wzR9fysnjyusv91Gn8x6HrUuaSYFTXij5LvH/bg_movie.mp4" type="video/mp4">
+            <source src="https://ipfs.io/ipfs/QmUugRkSPLrtP7MD3GxUCpwk7HZkvHU5qCgaGjMXHsApZ7?filename=bg_movie.mp4" type="video/mp4">
             <p>Your browser does not support HTML5 video.</p>
           </video>
         </div>
@@ -450,36 +450,49 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
       <!-- Display the countdown timer in an element -->
       <script>
         // Set the date we're counting down to
-        var countDownDate = new Date("Nov 23, 2021 14:00:00").getTime();
+        var countDownDate = new Date("Nov 24, 2021 21:00:00").getTime();
   
         // Update the count down every 1 second
         var x = setInterval(function() {
   
-          // Get today's date and time
-          var now = new Date().getTime();
-  
-          // Find the distance between now and the count down date
-          var distance = countDownDate - now;
-  
-          // Time calculations for days, hours, minutes and seconds
-          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-          
-          document.getElementById("timer_d").innerHTML = String(days);
-          document.getElementById("timer_h").innerHTML = String(hours);
-          document.getElementById("timer_m").innerHTML = String(minutes);
-  
-          // If the count down is finished, write some text
-          if (distance < 0) {
-            clearInterval(x);
-            document.getElementById("mintButton").href = "Hyper-mint-now.html"; 
-            document.getElementById("timer_d").innerHTML = "00";
-            document.getElementById("timer_h").innerHTML = "00";
-            document.getElementById("timer_m").innerHTML = "00";
-          }
+        // Get today's date and time
+        var now = new Date().getTime();
+
+        // Find the distance between now and the count down date
+        var distance = countDownDate - now;
+
+        // Time calculations for days, hours, minutes and seconds
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+        
+        document.getElementById("timer_d").innerHTML = String(days);
+        document.getElementById("timer_h").innerHTML = String(hours);
+        document.getElementById("timer_m").innerHTML = String(minutes);
+
+        // If the count down is finished, write some text
+        if (distance < 0) {
+          clearInterval(x);
+          document.getElementById("mintButton").href = "Hyper-mint-now.html"; 
+          document.getElementById("timer_d").innerHTML = "00";
+          document.getElementById("timer_h").innerHTML = "00";
+          document.getElementById("timer_m").innerHTML = "00";
+        }
         }, 1000);
-        </script>  
-  
+      </script>  
+    <!--*************** LOADING WEBSITE **********-->
+    <div class="loader-wrapper">
+      <span class="loader">
+        <video src="images/logo_movie.mp4" autoplay loop muted width="300" height="300">
+        </span>
+        <h4 class="loading-text">Loading...</h4>
+    </div>
+    <script src="js/jquery.js"></script>
+    <script>
+       $(window).on("load",function(){
+        $(".loader-wrapper").fadeOut("slow");
+      });
+    </script>
+
 </body></html>
